# chirashi

./: .gitignore  .graphifyignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Frameworks  README-CHIRASHI.md  README.md  TODO.md  build.zig  go.mod  go.sum  main.go  main_linux.go  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
.zig-cache/tmp/: 4830a3b24aebd0a2-cgo-gcc-input-1774274978.o.d  6957db17a38f9a24-cgo-gcc-input-3469407406.o.d  f88c76ba745a3f1a-cgo-gcc-input-2220335052.o.d
cmd/: root.go
docs/: phase2-output-plan.md  phase2-plan.md
graphify-out/: .graphify_analysis.json  .graphify_chunk_01.json  .graphify_labels.json  .graphify_python  .graphify_semantic_new.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
internal/engine/: bpm_test.go  bridge.go  bridge_stubs.go  encode_rex2.go  encoder.go  encoder_adg.go  encoder_aiff.go  encoder_caf.go  encoder_d2pst.go  encoder_el.go  encoder_op1.go  encoder_ot.go  encoder_output_test.go  encoder_pti.go  encoder_simpler.go  encoder_xrni.go  encoder_xy.go  extractor.zig  extractor_stub.zig  reader.go  reader_aiff.go  reader_caf.go  reader_d2pst.go  reader_drumrack.go  reader_dt2pst.go  reader_ot.go  reader_pti.go  reader_simpler.go  reader_wav.go  reader_xrni.go  (+5 more)
samples/: SM101_brk_Bongo Bar_110bpm.xrni  SOLE DISPLAY.dt2pst  Winstons - Amen, Brother (ver.1).rx2  sample.ot
tests/: encoder_format_test.go  encoder_test.go  integration_test.go  processor_test.go  reader_test.go
(+38 files in other folders)
